Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>My name is Tarric! I am currently a student at Flatiron School. I believe technology can solve many of the world's problems but I am specifically interested in its applications in finance. </p>
